--- a/src/UnturnedRedistUpdateTool/UnturnedRedistUpdateTool.csproj
+++ b/src/UnturnedRedistUpdateTool/UnturnedRedistUpdateTool.csproj
@@ -2,9 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RedistUpdateToolVersion>0.0.0</RedistUpdateToolVersion>
+    <Version>$(RedistUpdateToolVersion)</Version>
+    <InformationalVersion>$(RedistUpdateToolVersion)</InformationalVersion>
   </PropertyGroup>
 
   <ItemGroup>
