--- a/.github/workflows/RedistTool.yaml
+++ b/.github/workflows/RedistTool.yaml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Build UnturnedRedistUpdateTool
         uses: ./.github/actions/project-build
-        id: auto-installer-build
+        id: redist-update-tool-build
         with:
           project_path: src/UnturnedRedistUpdateTool
           github_token: ${{ secrets.PAT }}
@@ -52,17 +52,17 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: UnturnedRedistUpdateTool.zip
-          path: "./src/UnturnedRedistUpdateTool/bin/Release/net9.0/linux-x64/UnturnedRedistUpdateTool/UnturnedRedistUpdateTool.zip"
+          path: "./src/UnturnedRedistUpdateTool/bin/Release/net9.0/linux-x64/UnturnedRedistUpdateTool.zip"
           if-no-files-found: error
 
       - name: Create Release
         if: github.event_name == 'create' && github.event.ref_type == 'tag'
         uses: ncipollo/release-action@v1
         with:
-          name: UnturnedRedistUpdateTool Release v${{ steps.auto-installer-build.outputs.version }}
-          tag: ${{ steps.auto-installer-build.outputs.version }}
-          artifacts: "./src/UnturnedRedistUpdateTool/bin/Release/net9.0/linux-x64/UnturnedRedistUpdateTool/UnturnedRedistUpdateTool.zip"
+          name: UnturnedRedistUpdateTool Release v${{ steps.redist-update-tool-build.outputs.version }}
+          tag: ${{ steps.redist-update-tool-build.outputs.version }}
+          artifacts: "./src/UnturnedRedistUpdateTool/bin/Release/net9.0/linux-x64/UnturnedRedistUpdateTool.zip"
           token: ${{ secrets.PAT }}
-          prerelease: ${{ steps.auto-installer-build.outputs.is_prerelease }}
+          prerelease: ${{ steps.redist-update-tool-build.outputs.is_prerelease }}
           allowUpdates: true
           draft: true
