--- a/tests/UnturnedRedistUpdateTool.Tests/UnturnedRedistUpdateTool.Tests.csproj
+++ b/tests/UnturnedRedistUpdateTool.Tests/UnturnedRedistUpdateTool.Tests.csproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <None Update="TestData\**\*.*">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
