--- a/src/UnturnedRedistUpdateTool/UnturnedRedistUpdateTool.csproj
+++ b/src/UnturnedRedistUpdateTool/UnturnedRedistUpdateTool.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BepInEx.AssemblyPublicizer" Version="0.4.3" />
     <PackageReference Include="SharpZipLib" Version="1.4.2"/>
     <PackageReference Include="ValveKeyValue" Version="0.13.1.398"/>
   </ItemGroup>
